--- a/src/index.html
+++ b/src/index.html
@@ -29,22 +29,88 @@
       </section>
 
       <section>
-        <div class="container">
-          <div class="featured">
+        <div class="featured">
+          <div class="container">
             <h2 class="featured__title">Featured Universities</h2>
+            <div class="featured__slider">
+              <div class="featured__card">
+                <img src="./images/logo_01.png" alt="MACQUARIE University">
+              </div>
+              <div class="featured__card">
+                <img src="./images/logo_02.png" alt="Charles University">
+              </div>
+              <div class="featured__card">
+                <img src="./images/logo_03.png" alt="NEWCASTLE University">
+              </div>
+              <div class="featured__card">
+                <img src="./images/logo_04.png" alt="LA TROUBE University">
+              </div>
+              <div class="featured__card">
+                <img src="./images/logo_01.png" alt="MACQUARIE University">
+              </div>
+              <div class="featured__card">
+                <img src="./images/logo_02.png" alt="Charles University">
+              </div>
+              <div class="featured__card">
+                <img src="./images/logo_03.png" alt="NEWCASTLE University">
+              </div>
+              <div class="featured__card">
+                <img src="./images/logo_04.png" alt="LA TROUBE University">
+              </div>
+              <div class="featured__card">
+                <img src="./images/logo_01.png" alt="MACQUARIE University">
+              </div>
+              <div class="featured__card">
+                <img src="./images/logo_02.png" alt="Charles University">
+              </div>
+              <div class="featured__card">
+                <img src="./images/logo_03.png" alt="NEWCASTLE University">
+              </div>
+              <div class="featured__card">
+                <img src="./images/logo_04.png" alt="LA TROUBE University">
+              </div>
+            </div>
           </div>
-          <div class="featured__slider">
-            <div class="featured__card">
-              <img src="./images/logo_01.png" alt="MACQUARIE University">
-            </div>
-            <div class="featured__card">
-              <img src="./images/logo_02.png" alt="Charles University">
-            </div>
-            <div class="featured__card">
-              <img src="./images/logo_03.png" alt="NEWCASTLE University">
-            </div>
-            <div class="featured__card">
-              <img src="./images/logo_04.png" alt="LA TROUBE University">
+
+        </div>
+      </section>
+
+      <section>
+        <div class="services">
+          <div class="container">
+            <h2 class="title">Our Services</h2>
+            <div class="text">Executive Trade International is an University Application Centre, guiding Bangladeshi students to Australian, British, Canadian and Irish universities!</div>
+            <div class="services__container">
+              <div class="services__card">
+                <div class="services__img"></div>
+                <div class="services__article">Career Counselling</div>
+                <div class="services__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. Voluptatum </div>
+                <button class="services__btn">Learn More</button>
+              </div>
+              <div class="services__card">
+                <div class="services__img"></div>
+                <div class="services__article">University Admissions</div>
+                <div class="services__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. Voluptatum </div>
+                <button class="services__btn">Learn More</button>
+              </div>
+              <div class="services__card">
+                <div class="services__img"></div>
+                <div class="services__article">Visa Consultancy</div>
+                <div class="services__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. Voluptatum Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. Voluptatum </div>
+                <button class="services__btn">Learn More</button>
+              </div>
+              <div class="services__card">
+                <div class="services__img"></div>
+                <div class="services__article">Accommodation</div>
+                <div class="services__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. Voluptatum </div>
+                <button class="services__btn">Learn More</button>
+              </div>
+              <div class="services__card">
+                <div class="services__img"></div>
+                <div class="services__article">Pre-Departure Briefing</div>
+                <div class="services__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. Voluptatum </div>
+                <button class="services__btn">Learn More</button>
+              </div>
             </div>
           </div>
         </div>
