--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
 
     <link rel="stylesheet" href="css/style.min.css">
 
@@ -115,6 +115,262 @@
           </div>
         </div>
       </section>
+
+      <section>
+        <div class="news">
+          <div class="news__background"></div>
+          <div class="container">
+            <h2 class="title">News</h2>
+            <div class="text">Sunt autem nusquam hoc epicurus in gravissimo bello animadversionis metu degendae praesidia firmissima. Torquatos nostros? quos tu paulo ante cum teneam sententiam, quid bonum esse vult.</div>
+            <div class="news__container">
+              <div class="news__card">
+                <img src="./images/news_01.jpg" alt="art" class="news__img">
+                <div class="news__data">17 Apr 2020</div>
+                <div class="news__title">Come On In. The Water’s Fine (Mostly).</div>
+              </div>
+              <div class="news__card">
+                <img src="./images/news_02.jpg" alt="art" class="news__img">
+                <div class="news__data">17 Apr 2020</div>
+                <div class="news__title">Trump Lays Plans to Reverse Obama’s Climate Change Legacy</div>
+              </div>
+              <div class="news__card">
+                <img src="./images/news_03.jpg" alt="art" class="news__img">
+                <div class="news__data">17 Apr 2020</div>
+                <div class="news__title">How a Little Bit of Hydra Regrows a Whole Animal</div>
+              </div>
+            </div>
+            <div class="news__btn">Join Here</div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="events">
+          <div class="container">
+            <h2 class="title">Upcoming University Events</h2>
+            <div class="text">Sunt autem nusquam hoc epicurus in gravissimo bello animadversionis metu degendae praesidia firmissima. Torquatos nostros? quos tu paulo ante cum teneam sententiam, quid bonum esse vult.</div>
+            <div class="events__container">
+              <div class="events__card">
+                <div class="events__up">
+                  <div class="events__data"> <p><span>23</span> Dec</p></div>
+                  <div class="events__title">Macquarie University, Sydney, Australia</div>
+                </div>
+                <div class="events__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. Voluptatum quia quia voluptas voluptatem vero ex possimus. Iure et consectetur dolorem dicta accusantium fugiat.</div>
+                <div class="events__down">
+                  <div class="events__btn">Learn More</div>
+                  <div class="events__time">10:00 AM - 2:00 PM</div>
+                </div>
+              </div>
+              <div class="events__card">
+                  <div class="events__up">
+                    <div class="events__data"><p><span>17</span> Oct</p></div>
+                    <div class="events__title">Federation University, Australia</div>
+                  </div>
+                  <div class="events__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. Voluptatum quia quia voluptas voluptatem vero ex possimus. Iure et consectetur dolorem dicta accusantium fugiat.</div>
+                  <div class="events__down">
+                    <div class="events__btn">Learn More</div>
+                    <div class="events__time">10:00 AM - 2:00 PM</div>
+                  </div>
+              </div>
+              <div class="events__card">
+                <div class="events__up">
+                  <div class="events__data"><p><span>23</span> Dec</p></div>
+                  <div class="events__title">Macquarie University, Sydney, Australia</div>
+                </div>
+                <div class="events__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. Voluptatum quia quia voluptas voluptatem vero ex possimus. Iure et consectetur dolorem dicta accusantium fugiat.</div>
+                <div class="events__down">
+                  <div class="events__btn">Learn More</div>
+                  <div class="events__time">10:00 AM - 2:00 PM</div>
+                </div>
+              </div>
+              <div class="events__card">
+                <div class="events__up">
+                  <div class="events__data"><p><span>17</span> Oct</p></div>
+                  <div class="events__title">Federation University, Australia</div>
+                </div>
+                <div class="events__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. Voluptatum quia quia voluptas voluptatem vero ex possimus. Iure et consectetur dolorem dicta accusantium fugiat.</div>
+                <div class="events__down">
+                  <div class="events__btn">Learn More</div>
+                  <div class="events__time">10:00 AM - 2:00 PM</div>
+                </div>
+              </div>
+              <div class="events__card">
+                <div class="events__up">
+                  <div class="events__data"><p><span>23</span> Dec</p></div>
+                  <div class="events__title">Macquarie University, Sydney, Australia</div>
+                </div>
+                <div class="events__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. Voluptatum quia quia voluptas voluptatem vero ex possimus. Iure et consectetur dolorem dicta accusantium fugiat.</div>
+                <div class="events__down">
+                  <div class="events__btn">Learn More</div>
+                  <div class="events__time">10:00 AM - 2:00 PM</div>
+                </div>
+              </div>
+              <div class="events__card">
+                <div class="events__up">
+                  <div class="events__data"><p><span>17</span> Oct</p></div>
+                  <div class="events__title">Federation University, Australia</div>
+                </div>
+                <div class="events__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. Voluptatum quia quia voluptas voluptatem vero ex possimus. Iure et consectetur dolorem dicta accusantium fugiat.</div>
+                <div class="events__down">
+                  <div class="events__btn">Learn More</div>
+                  <div class="events__time">10:00 AM - 2:00 PM</div>
+                </div>
+              </div>
+              <div class="events__card">
+                <div class="events__up">
+                  <div class="events__data"><p><span>23</span> Dec</p></div>
+                  <div class="events__title">Macquarie University, Sydney, Australia</div>
+                </div>
+                <div class="events__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. Voluptatum quia quia voluptas voluptatem vero ex possimus. Iure et consectetur dolorem dicta accusantium fugiat.</div>
+                <div class="events__down">
+                  <div class="events__btn">Learn More</div>
+                  <div class="events__time">10:00 AM - 2:00 PM</div>
+                </div>
+              </div>
+              <div class="events__card">
+                <div class="events__up">
+                  <div class="events__data"><p><span>17</span> Oct</p></div>
+                  <div class="events__title">Federation University, Australia</div>
+                </div>
+                <div class="events__text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. Voluptatum quia quia voluptas voluptatem vero ex possimus. Iure et consectetur dolorem dicta accusantium fugiat.</div>
+                <div class="events__down">
+                  <div class="events__btn">Learn More</div>
+                  <div class="events__time">10:00 AM - 2:00 PM</div>
+                </div>
+              </div>
+          </div>
+          </div>
+      </section>
+
+      <section>
+        <div class="countries">
+          <div class="container">
+            <div class="title">Countries We Covered</div>
+            <div class="text">Sunt autem nusquam hoc epicurus in gravissimo bello animadversionis metu degendae praesidia firmissima. Torquatos nostros? quos tu paulo ante cum teneam sententiam, quid bonum esse vult.</div>
+            <div class="countries__container">
+              <div class="countries__card">
+                <div class="countries__img">
+                  <img src="./images/countires_01.jpg" alt="Australia">
+                </div>
+                <div class="countries__title">Study in Australia</div>
+                <div class="countries__text">Ut aut corporis accusantium illo ullam qui laudantium. Maxime rerum sunt et sequi sed qui rerum hic. Voluptatem maiores voluptatum voluptate porro harum. Facilis voluptatum eum est.</div>
+              </div>
+              <div class="countries__card">
+                <div class="countries__img">
+                  <img src="./images/countires_02.jpg" alt="Australia">
+                </div>
+                <div class="countries__title">Study in Canada</div>
+                <div class="countries__text">Ut aut corporis accusantium illo ullam qui laudantium. Maxime rerum sunt et sequi sed qui rerum hic. Voluptatem maiores voluptatum voluptate porro harum. Facilis voluptatum eum est.</div>
+              </div>
+              <div class="countries__card">
+                <div class="countries__img">
+                  <img src="./images/countires_03.jpg" alt="Australia">
+                </div>
+                <div class="countries__title">Study in Uk</div>
+                <div class="countries__text">Ut aut corporis accusantium illo ullam qui laudantium. Maxime rerum sunt et sequi sed qui rerum hic. Voluptatem maiores voluptatum voluptate porro harum. Facilis voluptatum eum est.</div>
+              </div>
+              <div class="countries__card">
+                <div class="countries__img">
+                  <img src="./images/countires_01.jpg" alt="Australia">
+                </div>
+                <div class="countries__title">Study in Australia</div>
+                <div class="countries__text">Ut aut corporis accusantium illo ullam qui laudantium. Maxime rerum sunt et sequi sed qui rerum hic. Voluptatem maiores voluptatum voluptate porro harum. Facilis voluptatum eum est.</div>
+              </div>
+              <div class="countries__card">
+                <div class="countries__img">
+                  <img src="./images/countires_02.jpg" alt="Australia">
+                </div>
+                <div class="countries__title">Study in Canada</div>
+                <div class="countries__text">Ut aut corporis accusantium illo ullam qui laudantium. Maxime rerum sunt et sequi sed qui rerum hic. Voluptatem maiores voluptatum voluptate porro harum. Facilis voluptatum eum est.</div>
+              </div>
+              <div class="countries__card">
+                <div class="countries__img">
+                  <img src="./images/countires_03.jpg" alt="Australia">
+                </div>
+                <div class="countries__title">Study in Uk</div>
+                <div class="countries__text">Ut aut corporis accusantium illo ullam qui laudantium. Maxime rerum sunt et sequi sed qui rerum hic. Voluptatem maiores voluptatum voluptate porro harum. Facilis voluptatum eum est.</div>
+              </div>
+              <div class="countries__card">
+                <div class="countries__img">
+                  <img src="./images/countires_01.jpg" alt="Australia">
+                </div>
+                <div class="countries__title">Study in Australia</div>
+                <div class="countries__text">Ut aut corporis accusantium illo ullam qui laudantium. Maxime rerum sunt et sequi sed qui rerum hic. Voluptatem maiores voluptatum voluptate porro harum. Facilis voluptatum eum est.</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="testomonial">
+          <div class="container">
+            <h2 class="title">Testimonial</h2>
+            <div class="text">Torquem detraxit hosti et quidem faciunt, ut et negent satis esse appetendum, alterum. Si sine causa? quae fuerit causa, mox videro; interea hoc epicurus in liberos.</div>
+            <div class="testomonial__slider">
+              <div class="testomonial__card">
+                <div class="testomonial__up">
+                  <div class="testomonial__img">
+                    <img src="./images/testomonial_01.jpg" alt="employee">
+                  </div>
+                  <div class="testomonial__describe">
+                    <div class="testomonial__name">Harrison Phillips</div>
+                    <div class="testomonial__prof">Reporter</div>
+                  </div>
+                </div>
+                <div class="testomonial__text">Nisi cumque in necessitatibus molestiae eaque excepturi ab. Laboriosam ipsam voluptatem voluptatibus labore quam nihil. Quasi occaecati quos ratione quia aut molestiae velit et. Voluptatem id ea dicta inventore et quo impedit repudiandae. Qui officia aperiam atque qui occaecati est. Magnam voluptatem earum excepturi qui quae ea qui.</div>
+              </div>
+              <div class="testomonial__card">
+                <div class="testomonial__up">
+                  <div class="testomonial__img">
+                    <img src="./images/testomonial_02.jpg" alt="employee">
+                  </div>
+                  <div class="testomonial__describe">
+                    <div class="testomonial__name">Ainara Vergara</div>
+                    <div class="testomonial__prof">Landscape Architect</div>
+                  </div>
+                </div>
+                <div class="testomonial__text">Aut consectetur voluptas. Voluptatem minus quo voluptas in nulla iste. Fugiat alias sit sed dolorem quo. Qui praesentium et doloribus minima neque. Facere debitis sed est suscipit velit reprehenderit. Dolores aliquid dolore consequuntur ex.</div>
+              </div>
+              <div class="testomonial__card">
+                <div class="testomonial__up">
+                  <div class="testomonial__img">
+                    <img src="./images/testomonial_03.jpg" alt="employee">
+                  </div>
+                  <div class="testomonial__describe">
+                    <div class="testomonial__name">Niek Bove</div>
+                    <div class="testomonial__prof">Senior Developer</div>
+                  </div>
+                </div>
+                <div class="testomonial__text">Rem quia possimus eum adipisci autem aut sunt laboriosam autem. Qui soluta ut aut excepturi dolorem laborum ut. Qui alias aut provident quas illo. Eveniet debitis totam quaerat. Enim voluptatem fuga qui. Numquam iusto vero ipsa eveniet iusto.</div>
+              </div>
+              <div class="testomonial__card">
+                <div class="testomonial__up">
+                  <div class="testomonial__img">
+                    <img src="./images/testomonial_01.jpg" alt="employee">
+                  </div>
+                  <div class="testomonial__describe">
+                    <div class="testomonial__name">Harrison Phillips</div>
+                    <div class="testomonial__prof">Reporter</div>
+                  </div>
+                </div>
+                <div class="testomonial__text">Nisi cumque in necessitatibus molestiae eaque excepturi ab. Laboriosam ipsam voluptatem voluptatibus labore quam nihil. Quasi occaecati quos ratione quia aut molestiae velit et. Voluptatem id ea dicta inventore et quo impedit repudiandae. Qui officia aperiam atque qui occaecati est. Magnam voluptatem earum excepturi qui quae ea qui.</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="ready">
+          <div class="container">
+            <h2 class="ready__title">Ready to chase your dreams?</h2>
+          <button class="ready__btn">Apply Online</button>
+          </div>
+        </div>
+      </section>
+
+
 
 
     </main>
