--- a/src/images/SVG/demo.html
+++ b/src/images/SVG/demo.html
@@ -43,8 +43,8 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="_icon-youtube"></span>
-                <span class="mls"> _icon-youtube</span>
+                <span class="_icon-twitter"></span>
+                <span class="mls"> _icon-twitter</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e902" class="unit size1of2" />
