--- a/src/index.html
+++ b/src/index.html
@@ -370,7 +370,35 @@
         </div>
       </section>
 
-
+      <footer class="footer">
+        <div class="container footer__container">
+          <div class="footer__info">
+            <div class="footer__logo">
+              <img src="./images/footer_logo.png" alt="executive">
+            </div>
+            <div class="footer__text">Concord Royal Court (3rd floor)
+              Dhanmondi, Dhaka 1209, Bangladesh.</div>
+            <div class="footer__copyriting">© 2020 Executive Trade International.</div>
+          </div>
+          <ul class="footer__column">
+            <li class="footer__item">About Us</li>
+            <li class="footer__item">Responsibilities</li>
+            <li class="footer__item">Our Services</li>
+            <li class="footer__item">Contact</li>
+          </ul>
+          <ul class="footer__column">
+            <li class="footer__item">Disclaimer</li>
+            <li class="footer__item">Testimonials</li>
+            <li class="footer__item">Privacy Policy</li>
+            <li class="footer__item">Terms of Service</li>
+          </ul>
+          <div class="footer__socials">
+            <div class="footer__icon _icon-facebook"></div>
+            <div class="footer__icon _icon-twitter"></div>
+            <div class="footer__icon _icon-instagram"></div>
+          </div>
+        </div>
+      </footer>
 
 
     </main>
